crates/sparql-algebra/tests/snapshots/algebra_snapshots__snapshot_aggregate_group_by.snap
---
source: crates/sparql-algebra/tests/algebra_snapshots.rs
expression: "parse(\"SELECT ?t (COUNT(?x) AS ?c) WHERE { ?x a ?t } GROUP BY ?t\")"
---
Select {
    pattern: Project {
        inner: Extend {
            inner: Group {
                inner: Bgp {
                    patterns: [
                        TriplePattern {
                            subject: Variable(
                                ?x,
                            ),
                            predicate: NamedNode(
                                <http://www.w3.org/1999/02/22-rdf-syntax-ns#type>,
                            ),
                            object: Variable(
                                ?t,
                            ),
                        },
                    ],
                },
                variables: [
                    ?t,
                ],
                aggregates: [
                    (
                        ?__gmeow_agg_0,
                        FunctionCall {
                            function: Count,
                            expression: Variable(
                                ?x,
                            ),
                            distinct: false,
                        },
                    ),
                ],
            },
            variable: ?c,
            expression: Variable(
                ?__gmeow_agg_0,
            ),
        },
        variables: [
            ?t,
            ?c,
        ],
    },
    base_iri: None,
}
