crates/sparql-algebra/tests/snapshots/algebra_snapshots__snapshot_optional_union_bind.snap
---
source: crates/sparql-algebra/tests/algebra_snapshots.rs
expression: "parse(\"SELECT ?k WHERE { { ?a a gmeow:X } UNION { ?a a gmeow:Y } OPTIONAL { ?a gmeow:p ?b } BIND(\\\"x\\\" AS ?k) }\")"
---
Select {
    pattern: Project {
        inner: Extend {
            inner: LeftJoin {
                left: Union {
                    left: Bgp {
                        patterns: [
                            TriplePattern {
                                subject: Variable(
                                    ?a,
                                ),
                                predicate: NamedNode(
                                    <http://www.w3.org/1999/02/22-rdf-syntax-ns#type>,
                                ),
                                object: NamedNode(
                                    <https://x/X>,
                                ),
                            },
                        ],
                    },
                    right: Bgp {
                        patterns: [
                            TriplePattern {
                                subject: Variable(
                                    ?a,
                                ),
                                predicate: NamedNode(
                                    <http://www.w3.org/1999/02/22-rdf-syntax-ns#type>,
                                ),
                                object: NamedNode(
                                    <https://x/Y>,
                                ),
                            },
                        ],
                    },
                },
                right: Bgp {
                    patterns: [
                        TriplePattern {
                            subject: Variable(
                                ?a,
                            ),
                            predicate: NamedNode(
                                <https://x/p>,
                            ),
                            object: Variable(
                                ?b,
                            ),
                        },
                    ],
                },
                expression: None,
            },
            variable: ?k,
            expression: Literal(
                "x"^^<http://www.w3.org/2001/XMLSchema#string>,
            ),
        },
        variables: [
            ?k,
        ],
    },
    base_iri: None,
}
