crates/sparql-algebra/tests/snapshots/algebra_snapshots__snapshot_update_insert_data.snap
---
source: crates/sparql-algebra/tests/algebra_snapshots.rs
expression: "parse_update(\"INSERT DATA { gmeow:s gmeow:p gmeow:o . GRAPH gmeow:g { gmeow:s gmeow:p gmeow:o2 } }\")"
---
Update {
    operations: [
        InsertData {
            data: [
                QuadPattern {
                    triple: TriplePattern {
                        subject: NamedNode(
                            <https://x/s>,
                        ),
                        predicate: NamedNode(
                            <https://x/p>,
                        ),
                        object: NamedNode(
                            <https://x/o>,
                        ),
                    },
                    graph: None,
                },
                QuadPattern {
                    triple: TriplePattern {
                        subject: NamedNode(
                            <https://x/s>,
                        ),
                        predicate: NamedNode(
                            <https://x/p>,
                        ),
                        object: NamedNode(
                            <https://x/o2>,
                        ),
                    },
                    graph: Some(
                        NamedNode(
                            <https://x/g>,
                        ),
                    ),
                },
            ],
        },
    ],
    base_iri: None,
}
